syntax = "proto3";
package kv;

service KVStore {
  rpc Put(PutRequest) returns (PutResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Join(JoinRequest) returns (JoinResponse);
  rpc Ping(PingRequest) returns (PingResponse);
  rpc Heartbeat(stream PingRequest) returns (stream PingResponse);
}

message PutRequest {
  string key = 1;
  bytes value = 2;
}
message PutResponse { bool success = 1; }

message GetRequest { string key = 1; }
message GetResponse { bytes value = 1; bool found = 2; }

message JoinRequest { string address = 1; }
message JoinResponse { repeated string peers = 1; }

message PingRequest { string sender = 1; }
message PingResponse { bool alive = 1; }
